apps/scratch/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: scratch
  labels:
    app.kubernetes.io/name: scratch
