apps/scratch/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scratch
  namespace: scratch
  labels:
    app.kubernetes.io/name: scratch
spec:
  selector:
    app.kubernetes.io/name: scratch
  ports:
    - name: http
      port: 80
      targetPort: 8080
  type: ClusterIP
